test/files/neg/t8322.check
t8322.scala:17: error: ambiguous implicit values:
 both method $conforms in object Predef of type [A]A => A
 and value ew in trait F of type Writes[Any]
 match expected type T
  implicit def wr[E] = jw(implicitly, implicitly)
                          ^
t8322.scala:17: error: diverging implicit expansion for type W[Any]
starting with method jw in trait F
  implicit def wr[E] = jw(implicitly, implicitly)
                                      ^
t8322.scala:19: error: type mismatch;
 found   : String
 required: scala.util.Either[?,?]
  Right(0).right.flatMap(_ => new String())
                              ^
t8322.scala:15: warning: Implicit definition should have explicit type (inferred Writes[Seq[E]]) [quickfixable]
  implicit def rw[E] = Writes[Seq[E]] { _ => "" }
               ^
t8322.scala:17: warning: Implicit definition should have explicit type [quickfixable]
  implicit def wr[E] = jw(implicitly, implicitly)
               ^
2 warnings
3 errors
